<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:id="@+id/topLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/searchLinearLayout"
        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22dp"
            android:layout_marginTop="3dp"
            android:layout_weight="2"
            android:text="@string/exchanges"
            android:fontFamily="@font/inter_medium"
            android:textColor="#0B0B0B"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/notificationImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="-15px"
            android:layout_marginRight="20px"
            android:layout_weight="0"
            android:src="@drawable/bell_icon_with_dot" />

        <ImageView
            android:id="@+id/settingImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="70px"
            android:layout_weight="0"
            android:src="@drawable/setting_icon" />
    </LinearLayout>

        <LinearLayout
            android:id="@+id/searchLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/frameLayout"
            app:layout_constraintStart_toStartOf="@+id/frameLayout"
            app:layout_constraintTop_toBottomOf="@id/topLinearLayout"
            tools:visibility="visible">

            <!--        <SearchView-->
            <!--            android:id="@+id/searchBar"-->
            <!--            style="@android:style/Widget.Material.SearchView"-->
            <!--            android:layout_width="wrap_content"-->
            <!--            android:layout_height="match_parent"-->
            <!--            android:background="@drawable/custom_search_shape"-->
            <!--            android:iconifiedByDefault="false"-->
            <!--            android:queryBackground="@null"-->
            <!--            android:layout_marginLeft="10dp"-->
            <!--            android:queryHint="@string/searchCryptocurrency">-->

            <!--        </SearchView>-->

            <EditText
                android:id="@+id/searchBar"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginLeft="22dp"
                android:layout_weight="0"
                android:background="@drawable/custom_search_shape"
                android:drawableLeft="@drawable/search_icon"
                android:ems="10"
                android:hint="@string/searchCryptocurrency"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColorHint="#4D0B0B0B"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="85dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/filter_button_shape"
                android:drawableLeft="@drawable/filter"
                android:padding="5dp"
                android:text="@string/filter"
                android:textAllCaps="false"
                android:textColor="#4D0B0B0B"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tabLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:gravity="left"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/frameLayout"
            app:layout_constraintStart_toStartOf="@+id/frameLayout"
            app:layout_constraintTop_toBottomOf="@id/searchLinearLayout"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/cryptocurrency"
                android:textColor="#0B0B0B"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/nft"
                android:textColor="#4D0B0B0B"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/bitcoin"
            app:layout_constraintEnd_toEndOf="@+id/frameLayout"
            app:layout_constraintStart_toStartOf="@+id/frameLayout"
            app:layout_constraintTop_toBottomOf="@id/tabLinearLayout"
            tools:visibility="visible" />

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView3">

            <TextView
                android:id="@+id/topStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_cryptocurrency"
                android:fontFamily="@font/inter_medium"
                android:textColor="#0B0B0B"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginRight="40dp"/>

            <TextView
                android:id="@+id/viewAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View All"
                android:fontFamily="@font/inter_medium"
                android:textColor="#800B0B0B"
                android:textSize="14sp"
                android:layout_marginLeft="40dp"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>